[package]
edition = "2021"
name = "sneturfahi"
version = "0.1.0"

[dependencies]
bumpalo = "3"
log = "0.4"
macros = { path = "macros" }
nom = "7"
paste = "1"
thiserror = "1"

[dev-dependencies]
argh = "0.1"
atty = "0.2"
macros = { path = "macros", features = ["make-assert-parse-test"] }
parse-display = "0.6"
simplelog = "0.12"

[features]
type-alias-impl-trait = []
